# Fastor

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
Fastor/experimental/: SingleValueTensor.h
Fastor/simd_vector/: simd_vector_base.h
Fastor/util/: util.h
build_defs/: copts.bzl
cuda/: BUILD.bazel  cuda_check.h  cuda_init.h  cuda_vector.h  main.cc
